autoprefixer and sass-resources-loader

--- a/src/pages/home/home.jade
+++ b/src/pages/home/home.jade
@@ -6,5 +6,5 @@ block vars
 block content
   p "首页"
   .qrcode-wrap
-    img(src="#{require('../../assets/qrcode.jpg')}")
+    img(src=require('./images/qrcode.jpg'))
   a(href='about.dj.html') 去关于页面
