--- a/src/pages/about-us/author/author.jade
+++ b/src/pages/about-us/author/author.jade
@@ -1,2 +1,5 @@
-p Leon Zhang
-a(href="https://github.com/njleonzhang") git
+extends ../base/base
+
+block about-us
+  p Leon Zhang
+  a(href="https://github.com/njleonzhang") git
